--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chartist": "^0.11.4",
+    "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
     "firebase": "^8.6.0",
+    "perfect-scrollbar": "^1.5.3",
     "react": "^17.0.2",
+    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
