--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "remask": "^0.1.0-alpha.5",
+    "vanilla-masker": "^1.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
